Working on Projects section

--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Projects</h2>
                         <h3 class="mb-0">Adventure Awaits</h3>
-                        <a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a>
+                        <span><a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a></span>
+                        . 
+                        <span><a href="https://github.com/LaRenaiocco/travel-web-app">Github</a></span>
                         <p>Plan the perfect adventure with your friends.  Adventure Awaits 
                             is a full stack web app that allows you, the user, to create 
                             itineraries for trips, link those itineraries with your travel 
@@ -100,9 +102,11 @@
                         <div class="project-image-div">
                             <img class="project-image" src="assets/img/AdventureAwaits.png" />
                         </div>
-
+                        <br />
                         <h3 class="mb-0">Community Library</h3>
                         <a href="http://52.205.251.141/">http://52.205.251.141</a>
+                        . 
+                        <span><a href="https://github.com/LaRenaiocco/community-library">Github</a></span>
                         <p>Community Library is a full stack web app that I developed with 
                             the goal of learning how to work with the Cloudinary image 
                             repository API.  In the Community Library a user can search 
@@ -115,7 +119,20 @@
                         <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
                             Bootstrap, Cloudinary, Twilio, AWS Lightsail</i></p>
                         <div class="project-image-div">
-                            <img class="project-image" src="assets/img/Community Library.png" />
+                            <img class="project-image" src="assets/img/CommunityLibrary.png" />
+                        </div>
+                        <br />
+                        <h3 class="mb-0">Rosie's Movie Awards</h3>
+                        <a href="https://larenaiocco.github.io/my-movie-awards/">https://larenaiocco.github.io/my-movie-awards/</a>
+                        . 
+                        <span><a href="https://github.com/LaRenaiocco/my-movie-awards">Github</a></span>
+                        <p>The Shoppie Awards is a front end only web app that integrates with the 
+                            OMDB API to allow a user to search the movie database for their favorite 
+                            movies and "nominate" them for awards.
+                        </p>
+                        <p><i>Tech Stack: JavaScript, HTML/CSS, jQuery, Bootstrap, OMDB API, GitHub Pages</i></p>
+                        <div class="project-image-div">
+                            <img class="project-image" src="assets/img/MovieAwards.png" />
                         </div>
                 </div>
             </section>
@@ -134,7 +151,7 @@
                                 <li>Supported marketing managers at PR events across the tri-state area.</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2018 - March 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - March 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
@@ -148,7 +165,7 @@
                                 <li>Performed in a high pressure environment for millions of people in the US, Mexico and Japan.</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">November 2010 - September 2018</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Nov. 2010 - Sept. 2018</span></div>
                     </div>
                 </div>
             </section>
@@ -211,7 +228,7 @@
                         <li>CSS</li>
                     </ul>
                     <div class="subheading mb-3">Frameworks & Libraries</div>
-                    <ul class="fa-ul mb-0">
+                    <ul>
                         <li>Flask</li>
                         <li>React</li>
                         <li>jQuery</li>
@@ -219,7 +236,7 @@
                         <li>Bootstrap</li>
                     </ul>
                     <div class="subheading mb-3">Database & Indsutry Tools</div>
-                    <ul class="fa-ul mb-0">
+                    <ul>
                         <li>PostgreSQL</li>
                         <li>SQLAlchemy</li>
                         <li>CLI</li>
@@ -230,7 +247,7 @@
                         <li>Twilio API</li>
                     </ul>
                     <div class="subheading mb-3">Other</div>
-                    <ul class="fa-ul mb-0">
+                    <ul>
                         <li>Agile Development and Scrum</li>
                         <li>Podcast Hosting</li>
                         <li>Public Speaking (scripted and live interview format)</li>
@@ -257,6 +274,23 @@
                 </div>
             </section>
             <hr class="m-0" />
+            <!-- Media-->
+            <section class="resume-section" id="interests">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Media</h2>
+                    <div class="subheading mb-3">Developer Media</div>
+                    <a href="https://www.youtube.com/watch?v=zTKO-s-q15c&t=2571s">Interview on Microsoft's 8-Bits</a>
+                    <a href="https://www.twitch.tv/videos/888973654?filter=archives&sort=time">Interview on Adopt-A-Dev</a>
+                    <div class="subheading mb-3">Clown Media</div>
+                    <p>Okay, I know you are really here, because the fact that I am also a 
+                        clown intrigues you!  Here are some links to some of my clown stuff:
+                    </p>
+                    <a href="https://youtu.be/GlURjoKXeU0">Make-up Demo and Clown Facts with LaRena</a>
+                    <a href="https://www.youtube.com/watch?v=XLsGkP2eW70&list=FLoYWtcHMOOwOy7qothMSDVg&index=8&t=3s">Aerial Pre-Show Act</a>
+                    <a href="https://youtu.be/foj6Kf4KeqQ">Starbucks Pre-Show Gag</a>
+                    
+                </div>
+            </section>
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
@@ -277,52 +311,6 @@
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
-                        </li>
-                    </ul>
-                </div>
-            </section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
