fixed a tag hover and cleaned up html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>LaRena Iocco</title>
+        <title>LaRena Iocco - Software Engineer</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v5.15.1/js/all.js" crossorigin="anonymous"></script>
@@ -85,7 +85,7 @@
                     <h2 class="mb-5">Projects</h2>
                         <h3 class="mb-0">Adventure Awaits</h3>
                         <span><a href="http://adventure-awaits.fun">http://adventure-awaits.fun</a></span>
-                        . 
+                        | 
                         <span><a href="https://github.com/LaRenaiocco/travel-web-app">Github</a></span>
                         <p>Plan the perfect adventure with your friends.  Adventure Awaits 
                             is a full stack web app that allows you, the user, to create 
@@ -105,7 +105,7 @@
                         <br />
                         <h3 class="mb-0">Community Library</h3>
                         <a href="http://52.205.251.141/">http://52.205.251.141</a>
-                        . 
+                        | 
                         <span><a href="https://github.com/LaRenaiocco/community-library">Github</a></span>
                         <p>Community Library is a full stack web app that I developed with 
                             the goal of learning how to work with the Cloudinary image 
@@ -124,7 +124,7 @@
                         <br />
                         <h3 class="mb-0">Rosie's Movie Awards</h3>
                         <a href="https://larenaiocco.github.io/my-movie-awards/">https://larenaiocco.github.io/my-movie-awards/</a>
-                        . 
+                        | 
                         <span><a href="https://github.com/LaRenaiocco/my-movie-awards">Github</a></span>
                         <p>The Shoppie Awards is a front end only web app that integrates with the 
                             OMDB API to allow a user to search the movie database for their favorite 
@@ -204,22 +204,6 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages</div>
-                    <!-- <ul class="list-inline dev-icons"> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-html5"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-js-square"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-angular"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-react"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-node-js"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-sass"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-less"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-wordpress"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-gulp"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-grunt"></i></li> -->
-                        <!-- <li class="list-inline-item"><i class="fab fa-npm"></i></li> -->
-                    <!-- </ul> -->
-                    <!-- <div class="subheading mb-3">Workflow</div> -->
-                    <!-- <ul class="fa-ul mb-0"> -->
                     <ul>
                         <li>Python</li>
                         <li>JavaScript</li>
@@ -253,24 +237,6 @@
                         <li>Public Speaking (scripted and live interview format)</li>
                         <li>Video and audio editing</li>
                     </ul>
-
-                        <!-- <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python, JavaScript, SQL, HTML, CSS
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
-                        </li> -->
-                    </ul>
                 </div>
             </section>
             <hr class="m-0" />
@@ -279,16 +245,37 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Media</h2>
                     <div class="subheading mb-3">Developer Media</div>
-                    <a href="https://www.youtube.com/watch?v=zTKO-s-q15c&t=2571s">Interview on Microsoft's 8-Bits</a>
-                    <a href="https://www.twitch.tv/videos/888973654?filter=archives&sort=time">Interview on Adopt-A-Dev</a>
+                    <ul>
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=zTKO-s-q15c&t=2571s">Interview on Microsoft's 8-Bits</a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitch.tv/videos/888973654?filter=archives&sort=time">Interview on Adopt-A-Dev</a>
+                        </li>
+                    </ul>
                     <div class="subheading mb-3">Clown Media</div>
-                    <p>Okay, I know you are really here, because the fact that I am also a 
-                        clown intrigues you!  Here are some links to some of my clown stuff:
+                    <p>Okay, I know you are really here because I am also a 
+                        clown and that intrigues you!  
+                        <br />
+                        Here are some links to some videos:
                     </p>
-                    <a href="https://youtu.be/GlURjoKXeU0">Make-up Demo and Clown Facts with LaRena</a>
-                    <a href="https://www.youtube.com/watch?v=XLsGkP2eW70&list=FLoYWtcHMOOwOy7qothMSDVg&index=8&t=3s">Aerial Pre-Show Act</a>
-                    <a href="https://youtu.be/foj6Kf4KeqQ">Starbucks Pre-Show Gag</a>
-                    
+                    <ul>
+                        <li>
+                            <a href="https://youtu.be/GlURjoKXeU0">Make-up Demo and Clown Facts with LaRena - 2020</a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=smd_c-S4DD4&list=FLoYWtcHMOOwOy7qothMSDVg&index=32">RBBB's Funundrum Clown Car - 2010</a>
+                        </li>
+                        <li>
+                            <a href="https://www.youtube.com/watch?v=XLsGkP2eW70&list=FLoYWtcHMOOwOy7qothMSDVg&index=8&t=3s">Aerial Pre-Show Act - 2012</a>
+                        </li>
+                        <li>
+                            <a href="https://youtu.be/foj6Kf4KeqQ">RBBB's Built To Amaze Soap Gag - 2014</a>
+                        </li>
+                        <li>
+                            <a href="https://youtu.be/N4dg-rd12qk">Starbucks Pre-Show Gag - 2016</a>
+                        </li>
+                    </ul>
                 </div>
             </section>
             <!-- Interests-->
@@ -300,7 +287,7 @@
                         embroidering and sewing with upcycled kimono fabric.  I also enjoy getting 
                         creative with my baking and bake a lot of gluten-free goodies.
                     </p>
-                    <p>In my non-existent "spare time" I also cohost a 90's tv podcast called 
+                    <p>In my non-existent "spare time" I cohost a 90's tv podcast called 
                         "Pass the Hot Sauce". We are currently in our second seasion and have 
                         released over 60 episodes. In addition to hosting, I also serve as the 
                         backup audio engineer.
