--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </p>
                     <p class="lead mb-5">
                         But what to do next with my life?  Enter coding! During the pandemic 
-                        I suddenly found myself with lots of extra time and was finally able 
+                        I suddenly found myself with lots of extra time and was finally able to
                         dive into software development full-time.  The pandemic has been hard 
                         for a lot of us, but it allowed me the time to attend Hackbright 
                         Academy and really focus my energy on engineering.  I'm very excited 
@@ -184,17 +184,17 @@
                                 <li>Built solo full stack web app, Adventure Awaits, with Agile/Scrum methods and deployed with AWS Lightsail.</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - September 2020</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">July 2020 - Sept. 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">San Francisco Clown Conservatory</h3>
                             <div class="subheading mb-3">Certificate</div>
                             <ul>
-                                <li>Full time education in clowning and circus arts with a focus on creating/obtaining lasting employment in entertainment.</li>
+                                <li>Full time education in clowning and circus arts with a focus on creating original content and obtaining lasting employment in entertainment.</li>
                             </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2007 - June 2008</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">Sept. 2007 - June 2008</span></div>
                     </div>
                 </div>
             </section>
@@ -241,7 +241,7 @@
             </section>
             <hr class="m-0" />
             <!-- Media-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="media">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Media</h2>
                     <div class="subheading mb-3">Developer Media</div>
