--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                             <h3 class="mb-0">Hackbright Academy</h3>
                             <div class="subheading mb-3">Certificate</div>
                             <ul>
-                                <li>Equipped with best practices of full stack software development in an in depth full-time engineering program.</li>
+                                <li>Equipped with best practices of full stack software development in an in-depth full-time engineering program.</li>
                                 <li>Expanded my knowledge of data structures, algorithms and programming languages.</li>
                                 <li>Built solo full stack web app, Adventure Awaits, with Agile/Scrum methods and deployed with AWS Lightsail.</li>
                             </ul>
@@ -196,6 +196,15 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2007 - June 2008</span></div>
                     </div>
+                </div>
+                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="flex-grow-1">
+                        <h3 class="mb-0">Santa Rosa Junior College</h3>
+                        <ul>
+                            <li>General Education and Theatre Arts</li>
+                        </ul>
+                    </div>
+                    <div class="flex-shrink-0"><span class="text-primary">1998-2007</span></div>
                 </div>
             </section>
             <hr class="m-0" />
