--- a/index.html
+++ b/index.html
@@ -196,16 +196,17 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2007 - June 2008</span></div>
                     </div>
-                </div>
-                <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                    <div class="flex-grow-1">
-                        <h3 class="mb-0">Santa Rosa Junior College</h3>
-                        <ul>
-                            <li>General Education and Theatre Arts</li>
-                        </ul>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Santa Rosa Junior College</h3>
+                            <ul>
+                                <li>General Education and Theatre Arts</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">1998-2007</span></div>
                     </div>
-                    <div class="flex-shrink-0"><span class="text-primary">1998-2007</span></div>
                 </div>
+
             </section>
             <hr class="m-0" />
             <!-- Skills-->
