Fixed sizing on Community Library Image

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         <p><i>Tech Stack: Python, JavaScript, HTML/CSS, SQL, Flask, jQuery, 
                             Bootstrap, Cloudinary, Twilio, AWS Lightsail</i></p>
                         <div class="project-image-div">
-                            <img class="project-image" src="assets/img/CommunityLibrary.png" />
+                            <img class="project-image" id="comm-lib" src="assets/img/CommunityLibrary.png" />
                         </div>
                         <br />
                         <h3 class="mb-0">Rosie's Movie Awards</h3>
