--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                         <span><img id="clown" class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/LaRenaClownSquare.jpg" alt="" /></span>
                     </h1>
                     <div class="subheading mb-5">
-                        New York, NY · (707) 318-2084 ·
+                        New York, NY · 
                         <a href="mailto:Rosie.McQueen@gmail.com">Rosie.McQueen@gmail.com</a>
                     </div>
                     <p class="lead mb-5">
@@ -126,7 +126,7 @@
                         <a href="https://larenaiocco.github.io/my-movie-awards/">https://larenaiocco.github.io/my-movie-awards/</a>
                         | 
                         <span><a href="https://github.com/LaRenaiocco/my-movie-awards">Github</a></span>
-                        <p>The Shoppie Awards is a front end only web app that integrates with the 
+                        <p>The Rosie Awards is a front end only web app that integrates with the 
                             OMDB API to allow a user to search the movie database for their favorite 
                             movies and "nominate" them for awards.
                         </p>
