--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">Sept. 2018 - March 2020</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Clown</h3>
                             <div class="subheading mb-3">Ringling Bros. and Barnum & Bailey Circus/Kinoshita Circus</div>
@@ -186,7 +186,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">July 2020 - Sept. 2020</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">San Francisco Clown Conservatory</h3>
                             <div class="subheading mb-3">Certificate</div>
@@ -288,6 +288,7 @@
                     </ul>
                 </div>
             </section>
+            <hr class="m-0" />
             <!-- Interests-->
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
