Fixed typo in movie awards description

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                         <a href="https://larenaiocco.github.io/my-movie-awards/">https://larenaiocco.github.io/my-movie-awards/</a>
                         | 
                         <span><a href="https://github.com/LaRenaiocco/my-movie-awards">Github</a></span>
-                        <p>The Rosie Awards is a front end only web app that integrates with the 
+                        <p>The Rosie Awards is a single-page front end only web app that integrates with the 
                             OMDB API to allow a user to search the movie database for their favorite 
                             movies and "nominate" them for awards.
                         </p>
