Updated media links and twitch icon

--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/larena-iocco/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/LaRenaiocco"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="https://twitter.com/RinglingRosie"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://twitter.com/LaRenaiocco"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.twitch.tv/larenaiocco"><i class="fab fa-twitch"></i></a>
                         <!-- <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a> -->
                     </div>
                 </div>
@@ -256,6 +257,12 @@
                     <h2 class="mb-5">Media</h2>
                     <div class="subheading mb-3">Developer Media</div>
                     <ul>
+                        <li>
+                            <a href="https://www.twitch.tv/videos/906697020">Live Project Build with Bit Project - Part 1</a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitch.tv/videos/915840395">Live Project Build with Bit Project - Part 2</a>
+                        </li>
                         <li>
                             <a href="https://www.youtube.com/watch?v=zTKO-s-q15c&t=2571s">Interview on Microsoft's 8-Bits</a>
                         </li>
