Adding Buffering Map project to projects section

--- a/index.html
+++ b/index.html
@@ -135,6 +135,21 @@
                         <div class="project-image-div">
                             <img class="project-image" src="assets/img/MovieAwards.png" />
                         </div>
+                        <br />
+                        <h3 class="mb-0">Once More With Scoobies</h3>
+                        <a href="https://larenaiocco.github.io/buffering-data-project/">https://larenaiocco.github.io/buffering-data-project/</a>
+                        | 
+                        <span><a href="https://github.com/LaRenaiocco/buffering-data-project">Github</a></span>
+                        <p>Once More With Scoobies is a data visualtion project devleoped on behalf of
+                            the "Buffering the Vampire Slayer" podcast and uses Google Maps JavaScript
+                            API and Charts.JS to visualize where podcast listeners reside around the world.
+                            Developed with front-end only techniques, I'd like to convert this app to run
+                            with Express.JS in the future.
+                        </p>
+                        <p><i>Tech Stack: JavaScript, HTML/CSS, jQuery, Bootstrap, Google Maps API, Charts.JS, GitHub Pages</i></p>
+                        <div class="project-image-div">
+                            <img class="project-image" src="assets/img/buffering.png" />
+                        </div>
                 </div>
             </section>
             <hr class="m-0" />
