Testing branching and merging

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                             the "Buffering the Vampire Slayer" podcast and uses Google Maps JavaScript
                             API and Charts.JS to visualize where podcast listeners reside around the world.
                             Developed with front-end only techniques, I'd like to convert this app to run
-                            with Express.JS in the future. THIS IS A TEST
+                            with Express.JS in the future.
                         </p>
                         <p><i>Tech Stack: JavaScript, HTML/CSS, jQuery, Bootstrap, Google Maps API, Charts.JS, GitHub Pages</i></p>
                         <div class="project-image-div">
