--- a/index.html
+++ b/index.html
@@ -141,10 +141,13 @@
                         | 
                         <span><a href="https://github.com/LaRenaiocco/buffering-data-project">Github</a></span>
                         <p>Once More With Scoobies is a data visualtion project devleoped on behalf of
-                            the "Buffering the Vampire Slayer" podcast and uses Google Maps JavaScript
-                            API and Charts.JS to visualize where podcast listeners reside around the world.
-                            Developed with front-end only techniques, I'd like to convert this app to run
-                            with Express.JS in the future.
+                            the 
+                            <span><a href="https://www.bufferingthevampireslayer.com/">
+                                "Buffering the Vampire Slayer"
+                            </a></span> 
+                            podcast and uses Google Maps JavaScript API and Charts.JS to visualize where podcast 
+                            listeners reside around the world. Developed with front-end only techniques, I'd like
+                            to convert this app to run with Express.JS in the future.
                         </p>
                         <p><i>Tech Stack: JavaScript, HTML/CSS, jQuery, Bootstrap, Google Maps API, Charts.JS, GitHub Pages</i></p>
                         <div class="project-image-div">
