Added new twitch video to developer media

--- a/index.html
+++ b/index.html
@@ -276,10 +276,13 @@
                     <div class="subheading mb-3">Developer Media</div>
                     <ul>
                         <li>
-                            <a href="https://www.twitch.tv/videos/906697020">Live Project Build with Bit Project - Part 1</a>
+                            <a href="https://www.twitch.tv/videos/906697020">Twitch Live Project Build with Bit Project - Part 1</a>
                         </li>
                         <li>
-                            <a href="https://www.twitch.tv/videos/915840395">Live Project Build with Bit Project - Part 2</a>
+                            <a href="https://www.twitch.tv/videos/915840395">Twitch Live Project Build with Bit Project - Part 2</a>
+                        </li>
+                        <li>
+                            <a href="https://www.twitch.tv/videos/924884526">Twitch Live Project Build with Bit Project - Part 3</a>
                         </li>
                         <li>
                             <a href="https://www.youtube.com/watch?v=zTKO-s-q15c&t=2571s">Interview on Microsoft's 8-Bits</a>
