Fixed typo in projects

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                         <a href="https://larenaiocco.github.io/buffering-data-project/">https://larenaiocco.github.io/buffering-data-project/</a>
                         | 
                         <span><a href="https://github.com/LaRenaiocco/buffering-data-project">Github</a></span>
-                        <p>Once More With Scoobies is a data visualtion project devleoped on behalf of
+                        <p>Once More With Scoobies is a data visualtion project developed on behalf of
                             the "Buffering the Vampire Slayer" podcast and uses Google Maps JavaScript
                             API and Charts.JS to visualize where podcast listeners reside around the world.
                             Developed with front-end only techniques, I'd like to convert this app to run
