--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         about my future career in tech and to share my journey with other 
                         aspiring devs from non-traditional backgrounds.
                     </p>
+                    <p class="lead mb-5">Learn more about me on my socials: Linkedin, Github, Twitter and Twitch</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/larena-iocco/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/LaRenaiocco"><i class="fab fa-github"></i></a>
@@ -102,6 +103,21 @@
                             Bootstrap, Google Maps, Twilio, AWS Lightsail</i></p>
                         <div class="project-image-div ">
                             <img class="project-image" src="assets/img/AdventureAwaits.png" />
+                        </div>
+                        <br />
+                        <h3 class="mb-0">Graffiti Gallery</h3>
+                        <span><a href="https://larenaiocco.github.io/canvas-practice/">https://larenaiocco.github.io/canvas-practice/</a></span>
+                        | 
+                        <span><a href="https://github.com/LaRenaiocco/canvas-practice">Github</a></span>
+                        <p>The Graffiti Gallery was created with React as I wanted to get more
+                            familiar with components, hooks and state.  This simple app uses the 
+                            HTML canvas element to allow the user to create their own graffiti art.
+                            Choose different brick walls, canvas sizes, paint colors and reticles,
+                            as well as save your art to your computer.
+                        </p>
+                        <p><i>Tech Stack: ReactJavaScript, HTML/CSS </i></p>
+                        <div class="project-image-div ">
+                            <img class="project-image" src="assets/img/canvas.png" />
                         </div>
                         <br />
                         <h3 class="mb-0">Community Library</h3>
