Updated Job Section

--- a/index.html
+++ b/index.html
@@ -178,6 +178,18 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Solutions Engineer</h3>
+                            <div class="subheading mb-3">Datadog</div>
+                            <ul>
+                                <li>Respond to client requests on a fast paced team while educating clients on the use of the platform.</li>
+                                <li>Reproduce issues from 400+ integrations that Datadog works with.</li>
+                                <li>Build out internal documentation and knowledge based articles for a variety of technologies.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">May 2021 - Present</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Office Manager</h3>
                             <div class="subheading mb-3">Feld Entertainment</div>
                             <ul>
